# semantic_inference

./: .clang-format  .cmake-format.yaml  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  CMakeLists.txt  README.md  contributors.md  nodelet_plugins.xml  package.xml  pyproject.toml
.dev/: add-licenses.sh  check-licenses.sh  check_license.py
app/: demo_segmentation.cpp
cmake/: ort.CMakeLists.txt.in  protobuf.CMakeLists.txt.in  pytorch.CMakeLists.txt.in
config/: hrnetv2_360_640_v12.yaml  rednet_480_640_v13.yaml
docs/: closed_set.md  exporting.md  instance_seg.md  open_set.md
exporting/: NOTES.md  export_efficientvit.py  export_mit_semseg.py  export_oneformer.py  oneformer_inference.py
extras/semantic_inference_closed_set_zoo/: MANIFEST.in  README.md  pyproject.toml  setup.py
extras/semantic_inference_closed_set_zoo/src/semantic_inference_closed_set_zoo/: __init__.py  __main__.py  mask2former_wrapper.py  model_weights.yaml
install/: download_weights.py  packages.yaml  setup.sh
launch/: demo_segmentation.launch  demo_semantic_recolor.launch  master_semantic_recolor_pointcloud.launch  recolor_pointcloud.launch  semantic_recolor.launch  semantic_recolor_pointcloud.launch  semantic_recolor_rgbd.launch  test_inference.launch
scripts/: check_onnx_model.py  compare_label_spaces.py  download_models.py  export_onnx_model.py  make_ade150k_color_config.py  make_ade150k_color_config_expanded.py  make_color_config.py  make_color_legend.py  make_rosbag.py  requirements.txt  show_csv_grouping.py  show_label_groupings.py
semantic_inference/: CMakeLists.txt  package.xml  pyproject.toml  pytest.ini  setup.cfg  setup.py
semantic_inference/app/: demo_segmentation.cpp
semantic_inference/cmake/: Config.cmake.in  FindTensorRT.cmake  config.h.in
semantic_inference/config/: distinct_150_colors.csv
semantic_inference/config/colors/: mpcat40.csv
semantic_inference/config/label_groupings/: ade20k_indoor.yaml  ade20k_mit.yaml  ade20k_outdoor.yaml
semantic_inference/config/models/: rednet_480_640_v13.yaml  topformer_512_512.yaml
semantic_inference/include/semantic_inference/: cv_utilities.h  image_recolor.h  image_resizer.h  image_rotator.h  image_utilities.h  logging.h  model_config.h  segmenter.h
semantic_inference/python/: CMakeLists.txt  bindings.cpp
semantic_inference/python/semantic_inference/: __init__.py  __main__.py  config.py  image_io.py  image_rotator.py  misc.py  visualization.py
semantic_inference/python/semantic_inference/commands/: __init__.py  color.py  labelspace.py  model.py  run.py
semantic_inference/python/semantic_inference/models/: __init__.py  feature_visualizers.py  instance_segmenter.py  mask_functions.py  openset_segmenter.py  patch_extractor.py  segment_refinement.py  wrappers.py
semantic_inference/python/test/: conftest.py  helpers.py  test_config.py  test_image_rotator.py  test_openset_segmenter.py
semantic_inference/python/test/models/: test_mask_functions.py  test_patch_extractor.py  test_segment_refinement.py  test_wrappers.py
semantic_inference/src/: cv_utilities.cpp  image_recolor.cpp  image_resizer.cpp  image_rotator.cpp  image_utilities.cpp  logging.cpp  model.cpp  model.h  model_config.cpp  segmenter.cpp  trt_utilities.cpp  trt_utilities.h
semantic_inference/tests/: CMakeLists.txt  utest_config.cpp  utest_image_resizer.cpp  utest_image_utilities.cpp  utest_main.cpp
semantic_inference_msgs/: CMakeLists.txt  package.xml
semantic_inference_msgs/msg/: FeatureImage.msg  FeatureVector.msg  FeatureVectorStamped.msg  FeatureVectors.msg  Labelspace.msg
semantic_inference_msgs/srv/: EncodeFeature.srv
semantic_inference_ros/: CMakeLists.txt  LICENSE  nodelet_plugins.xml  package.xml  setup.py
semantic_inference_ros/app/: clip_publisher_node  closed_set_node.cpp  closed_set_rosbag_writer.cpp  image_embedding_node  instance_segmentation_node  language_embedding_node  make_rosbag  merge_rosbag  open_set_node  openset_segmentation_node  text_embedding_node
semantic_inference_ros/config/: hydra_object_gdsam_colors.csv
semantic_inference_ros/config/closed_set_models/: ade20k-hrnetv2-c1.yaml
semantic_inference_ros/config/instance_segmentation/: gdsam2.yaml  yolo-seg.yaml  yoloe.yaml  yolov11.yaml
semantic_inference_ros/config/label_groupings/: ade20k_full.yaml  ade20k_indoor.yaml  ade20k_mit.yaml  ade20k_mp3d.yaml  ade20k_outdoor.yaml
semantic_inference_ros/include/semantic_inference_ros/: output_publisher.h  pointcloud_projection.h  ros_log_sink.h  segmentation_nodelet.h  worker.h
semantic_inference_ros/launch/: clip_publisher.launch  clip_publisher.launch.yaml  clip_publisher.yaml  closed_set.launch.yaml  closed_set.yaml  closed_set_projection.launch.yaml  demo_segmentation.launch  demo_segmentation.yaml  image_embedding_node.launch.yaml  instance_segmentation.launch.yaml  instance_segmentation_gdsam2.launch.yaml  instance_segmentation_yolov11.launch.yaml  open_set.launch.yaml  open_set.yaml  openset_segmentation.launch  semantic_inference.launch  text_embedding_node.launch.yaml
semantic_inference_ros/scripts/: make_legacy_rosbag.py
semantic_inference_ros/semantic_inference_ros/: __init__.py  image_worker.py  prompt_encoder.py  ros_config.py  ros_conversions.py  ros_logging.py
semantic_inference_ros/src/: backprojection_nodelet.cpp  mask_nodelet.cpp  output_publisher.cpp  pointcloud_projection.cpp  recolor_nodelet.cpp  relabel_nodelet.cpp  rgbd_segmentation_nodelet.cpp  segmentation_nodelet.cpp
semantic_inference_ros/src/semantic_inference_ros/: __init__.py  image_worker.py  prompt_encoder.py  ros_config.py  ros_conversions.py  ros_logging.py
semantic_inference_ros/test/: main.cpp  test_pointcloud_projection.cpp
src/: caffe2_mask_rcnn.cpp  demo_rgbd_segmentation.cpp  demo_segmentation.cpp  demo_segmenter.cpp  image_recolor.cpp  image_utilities.cpp  mask_nodelet.cpp  model.cpp  model.h  model_config.cpp  nodelet.cpp  nodelet_output_publisher.cpp  ort_segmenter.cpp  output_publisher.cpp  recolor_nodelet.cpp  rgbd_segmentation_nodelet.cpp  rgbd_segmenter.cpp  ros_utilities.cpp  segmenter.cpp  (+6 more)
(+71 files in other folders)
