<?xml version="1.0"?>
<package format="2">
  <name>semantic_recolor_nodelet</name>
  <version>0.0.1</version>
  <description>Package wrapping detectron2-based models in C++</description>

  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>
  <author email="na26933@mit.edu">Nathan Hughes</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
