[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic_recolor"
version = "0.0.1"
dependencies = [
  "click",
  "onnx",
  "onnxscript",
  "packaging",
  "pyyaml",
  "torch",
  "yacs",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
filterwarnings = []
