<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_inference</name>
  <version>0.0.1</version>
  <description>Package wrapping tensort for semantic segmentation</description>

  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>
  <author email="na26933@mit.edu">Nathan Hughes</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend>cmake</buildtool_depend>
  <depend>config_utilities</depend>
  <depend>libopencv-dev</depend>

  <export>
      <build_type>cmake</build_type>
  </export>
</package>
