[build-system]
requires = ["setuptools<=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic_recolor"
version = "0.0.1"
dependencies = [
  "click",
  "einops",
  "imageio",
  "pyyaml",
  "torch",
  "torchvision",
]

[project.optional-dependencies]
dev = ["pytest"]
openset = ["clip@git+https://github.com/openai/CLIP.git", "ultralytics"]
f3rm = ["f3rm@git+https://github.com/f3rm/f3rm"]
sam = ["segment-anything@git+https://github.com/facebookresearch/segment-anything.git"]

[tool.setuptools.packages.find]
where = ["python"]
namespaces = false

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
filterwarnings = []
