[metadata]
name = semantic_inference
version = 0.0.1
author = Nathan Hughes

[options]
packages = find:
package_dir =
    =python
install_requires =
    click
    distinctipy
    einops
    imageio
    onnx
    pandas
    pyyaml
    seaborn
    torch
    torchvision

[options.packages.find]
where = python

[options.entry_points]
console_scripts =
    semantic-inference = semantic_inference.__main__:cli

[options.extras_require]
dev = pytest
openset =
    ultralytics
    clip @ git+https://github.com/openai/CLIP.git
    open_clip_torch
    numpy >= 1.20
f3rm =
    f3rm @ git+https://github.com/f3rm/f3rm
sam =
    segment-anything @ git+https://github.com/facebookresearch/segment-anything.git
