<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_inference_ros</name>
  <version>0.0.1</version>
  <description>ROS interface to tensorrt segmentation</description>

  <maintainer email="na26933@mit.edu">Nathan Hughes</maintainer>
  <author email="na26933@mit.edu">Nathan Hughes</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>semantic_inference</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
