[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic_inference_closed_set_zoo"
version = "0.0.1"
authors = [
 { name = "Nathan Hughes", email = "na26933@mit.edu" },
]
description = "Python package containing third-party closed set models"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "ninja",  # NOTE(nathan) required to try and force detectron2 to build faster
    "torch",
    "torchvision",
    "detectron2@git+https://github.com/facebookresearch/detectron2.git",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"
"semantic_inference.third_party.mask2former" = "third_party/Mask2Former/mask2former"
